--- a/springProject/src/main/resources/templates/footer.html
+++ b/springProject/src/main/resources/templates/footer.html
@@ -7,36 +7,35 @@
 </head>
 <body>
     <div id="footer">
-        <div id="footerTop">
-            <a href="#">회사 소개</a>
-            <div class="vLine"></div>
-            <a href="#">이용 약관</a>
-            <div class="vLine"></div>
-            <a href="#">개인정보 처리방침</a>
-            <div class="vLine"></div>
-            <a href="#">입점 문의</a>
-            <div class="vLine"></div>
-            <a href="#">찾아오시는 길</a>
-            <div class="vLine"></div>
-            <a href="#">Top</a>
-        </div>
-        <div id="footerCenter">
-            <ul>
-                <li>(주) 프로젝트쓰리닷컴 대표이사 : 김프로 | 사업자 등록번호 : 123-45-67890 <a href="#">사업자 정보 확인</a></li>
-                <li>서울 마포구 양화로 122  | E-mail : p3com_help@projectthree.com   | 개인정보 책임관리자 : 김프로</li>
-                <li>통신 판매업 신고 : 마포 제 00123호 | 분쟁 조정 기관 : 소비자 보호원, 전자거래 분쟁중재위원회| 에스크로 구매안전 서비스 이용 가능 <a href="#">자세히 보기</a></li>
-                <li>[방문상담·구매·A/S] 서울 마포구 양화로 122</li>
-                <li>[택배 A/S 접수] 서울 마포구 양화로 122 | [고객 센터] 1234-5678 (팩스 번호 02-123-4567)</li>
-            </ul>
-            <div id="copyRight">
-                <div>
-                    Project_3.com
-                </div>
-                <div>
-                    Copyright @2022 Project_3.com All rights reserved.
-                </div>
-            </div>
-        </div>
-    </div>
+	  <footer>
+	    <ul class="nav justify-content-around border-bottom" id="footerTop">
+	      <li class="nav-item"><a href="#" class="nav-link px-2">회사 소개</a></li>
+	      <li class="nav-item"><a href="#" class="nav-link px-2">이용 약관</a></li>
+	      <li class="nav-item"><a href="#" class="nav-link px-2">개인정보 처리방침</a></li>
+	      <li class="nav-item"><a href="#" class="nav-link px-2">입점 문의</a></li>
+	      <li class="nav-item"><a href="#" class="nav-link px-2">찾아오시는 길</a></li>
+	    </ul>
+	    <div id="footerCenter">
+	      <ul class="nav flex-column">
+	        <li class="nav-item mb-2 text-muted">(주) 프로젝트쓰리닷컴 대표이사 : 김프로 | 사업자 등록번호 : 123-45-67890 <a href="#">사업자 정보 확인</a></li>
+	        <li class="nav-item mb-2 text-muted">서울 마포구 양화로 122  | E-mail : p3com_help@projectthree.com   | 개인정보 책임관리자 : 김프로</li>
+	        <li class="nav-item mb-2 text-muted">통신 판매업 신고 : 마포 제 00123호 | 분쟁 조정 기관 : 소비자 보호원, 전자거래 분쟁중재위원회| 에스크로 구매안전 서비스 이용 가능 <a href="#">자세히 보기</a></li>
+	        <li class="nav-item mb-2 text-muted">[방문상담·구매·A/S] 서울 마포구 양화로 122</li>
+	        <li class="nav-item mb-2 text-muted">[택배 A/S 접수] 서울 마포구 양화로 122 | [고객 센터] 1234-5678 (팩스 번호 02-123-4567)</li>
+	      </ul>
+	    </div>
+	    <div class="d-flex flex-column flex-sm-row justify-content-between mt-3" id="footerBottom">
+	      <div class="col-md-4 d-flex align-items-center">
+		      <a href="/" class="mb-3 me-2 mb-md-0 text-decoration-none lh-1">
+		        Project_3.com
+		      </a>
+	      </div>
+	      <p class="col-md-6 d-flex align-items-center">Copyright @2022 Project_3.com All rights reserved.</p>
+	      <div>
+	      	<a href="#" class="mb-3 me-2 mb-md-0 text-decoration-none lh-1">Top</a>
+	      </div>
+	    </div>
+	  </footer>
+	</div>
 </body>
 </html>
