--- a/springProject/src/main/resources/templates/index.html
+++ b/springProject/src/main/resources/templates/index.html
@@ -7,40 +7,51 @@
 </head>
 <body>
 	<header th:insert="/header"></header>
-    <div id="swiperMain">
-        <div id="swiperMainImg">
-            <a href="#">
-              <img src="https://cdn.icoda.co.kr/asset/main/1659329913_3848_2196.jpg" alt="mainImg">
-            </a>
-        </div>
-    </div>  
-    <div id="swiperSub">
+	<main class="container">
+	<div id="mainImgContainer" class="carousel slide carousel-fade" data-bs-ride="carousel">
+	  <div class="carousel-inner">
+	    <div class="carousel-item active">
+	      <img src="/public/img/1658994834_781_6140.jpg" class="d-block w-100" alt="...">
+	    </div>
+	    <div class="carousel-item">
+	      <img src="/public/img/1660886076_328_2311.jpg" class="d-block w-100" alt="...">
+	    </div>
+	    <div class="carousel-item">
+	      <img src="/public/img/1659499786_0871_3184.jpg" class="d-block w-100" alt="...">
+	    </div>
+	  </div>
+	  <button class="carousel-control-prev" type="button" data-bs-target="#mainImgContainer" data-bs-slide="prev">
+	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	    <span class="visually-hidden">Previous</span>
+	  </button>
+	  <button class="carousel-control-next" type="button" data-bs-target="#mainImgContainer" data-bs-slide="next">
+	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	    <span class="visually-hidden">Next</span>
+	  </button>
+	</div> 
+    <div id="subImgContainer">
         <div>
-            <div class="swiperSubImg">
+            <div class="SubImg">
                 <a href="#">
-                    <img src="./45-450792_laptop-png-gaming-laptop-png-lenovo-transparent-png.png" alt="image">
+                    <img src="/public/img/45-450792_laptop-png-gaming-laptop-png-lenovo-transparent-png.png" alt="image">
                 </a>    
             </div>
-            <h3>게이밍 노트북</h3>
-            <p>
-                노트북으로도 다이나믹한 속도를 즐겨보세요!
-            </p>
+            <h3><a href="#">게이밍 노트북</a></h3>
+            <p>노트북으로도 다이나믹한 속도를 즐겨보세요!</p>
         </div>
         <div>
-            <div class="swiperSubImg">
+            <div class="SubImg">
                 <a href="#">
-                    <img src="./apple-logo-52C416BDDD-seeklogo.com.png" alt="image">
+                    <img src="/public/img/apple-logo-52C416BDDD-seeklogo.com.png" alt="image">
                 </a>  
             </div>
-            <h3>Apple Zone</h3>
-            <p>
-                애플의 다양한 제품을 만나보세요!
-            </p>
+            <h3><a href="#">Apple Zone</a></h3>
+            <p>애플의 다양한 제품을 만나보세요!</p>
         </div>
     </div>
     <div id="promotion">
         <div id="promotionImg">
-           <img src="./asus.png" alt="image">
+           <img src="/public/img/asus.png" alt="image">
         </div>
         <div>
             <h1>Big Event</h1>
@@ -53,10 +64,11 @@
                     22.08.01부터 소진시
             </p>
             <div>
-                <a href="#">특가 바로가기</a>
+                <a href="#" class="btn btn-primary">특가 바로가기</a>
             </div>
         </div>
     </div>  
+    </main>
     <footer th:insert="/footer"></footer>
 </body>
 </html>     
