--- a/springProject/src/main/resources/templates/product/filter.html
+++ b/springProject/src/main/resources/templates/product/filter.html
@@ -99,18 +99,6 @@
         </article>
         <article>
             <div class="filterGroup">
-                <span>용도</span>
-            </div>
-            <div>
-                <ul class="filterList">
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                </ul>
-            </div>
-        </article>
-        <article>
-            <div class="filterGroup">
                 <span>CPU 종류</span>
             </div>
             <div>
@@ -147,42 +135,6 @@
         </article>
         <article>
             <div class="filterGroup">
-                <span>SSD 용량</span>
-            </div>
-            <div>
-                <ul class="filterList">
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                </ul>
-            </div>
-        </article>
-        <article>
-            <div class="filterGroup">
-                <span>HDD 용량</span>
-            </div>
-            <div>
-                <ul class="filterList">
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                </ul>
-            </div>
-        </article>
-        <article>
-            <div class="filterGroup">
-                <span>VGA 제조사</span>
-            </div>
-            <div>
-                <ul class="filterList">
-                    <li>
-                        <span class="notSelected">노트북</span>
-                    </li>
-                </ul>
-            </div>
-        </article>
-        <article>
-            <div class="filterGroup">
                 <span>운영 체제</span>
             </div>
             <div>
@@ -195,7 +147,7 @@
         </article>
         <article>
             <div class="filterGroup">
-                <span>혜택, 이벤트, 기획전</span>
+                <span>무게</span>
             </div>
             <div>
                 <ul class="filterList">
