--- a/springProject/src/main/resources/templates/product/productList.html
+++ b/springProject/src/main/resources/templates/product/productList.html
@@ -7,7 +7,15 @@
 </head>
 <body>
 	<header th:insert="/header"></header>
-	<nav id="" th:insert="/product/productNav"></nav>
+	<main class="container">
+	<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" id="path">
+	  <ol class="breadcrumb">
+	    <li class="breadcrumb-item"><a href="#">홈</a></li>
+	    <li class="breadcrumb-item" aria-current="page"><a href="#" class="breadcrumb-item active">노트북</a></li>
+	  </ol>
+	</nav>
+	<div th:insert="/product/filter" id="filter"></div>
+	<nav class="sticky-top" id="filterNav" th:insert="/product/productNav"></nav>
     <ul id="productContainer">
         <li th:each="product : ${products}">
           <div class="productList border">
@@ -66,7 +74,8 @@
           </div>
         </li>
     </ul>
-    <div class="d-flex justify-content-center" th:insert="/paging"></div>
+    <div class="d-flex justify-content-center" th:insert="/paging" style="margin-bottom: 14px;"></div>
+    </main>
     <footer th:insert="/footer"></footer>
 </body>
 </html>
